@@ -1,4 +1,5 @@
 [cont3xt]
+authMode=regressionTests
 usersPrefix=tests
 disableUserPasswordUI=false
 #dbUrl=lmdb:///tmp/cont3xt-db
